--- a/index.html
+++ b/index.html
@@ -19,30 +19,27 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="bx-bot" class="anchor" href="#bx-bot" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>BX-bot</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<h2>
+<a id="what-is-bx-bot" class="anchor" href="#what-is-bx-bot" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is BX-bot?</h2>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>BX-bot (<em>Bex</em>) is a simple Java automated trading bot for trading <a href="https://bitcoin.org">Bitcoin</a> on cryptocurrency <a href="https://bitcoinwisdom.com/">exchanges</a>.</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>The project contains the basic infrastructure to trade on a <a href="http://coinmarketcap.com/">cryptocurrency</a> exchange...
+except for the trading strategies - you'll need to write those yourself. A simple example <a href="http://www.investopedia.com/articles/trading/02/081902.asp">scalping strategy</a> is included to get you started with the Trading API - take a look <a href="http://www.investopedia.com/articles/active-trading/101014/basics-algorithmic-trading-concepts-and-examples.asp">here</a> for more ideas.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>Exchange Adapters for using <a href="https://btc-e.com">BTC-e</a>, <a href="https://www.bitstamp.net">Bitstamp</a>, 
+<a href="https://www.bitfinex.com">Bitfinex</a>, <a href="https://www.okcoin.com/">OKCoin</a>, <a href="https://www.huobi.com/">Huobi</a>, 
+<a href="https://www.gdax.com/">GDAX</a>, <a href="https://www.itbit.com/">itBit</a>, <a href="https://www.kraken.com">Kraken</a>, and <a href="https://gemini.com/">Gemini</a> are included. Feel free to improve these or contribute new adapters to the project, that would be shiny.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>The Trading API provides support for <a href="http://www.investopedia.com/terms/l/limitorder.asp">limit orders</a>
+traded at the <a href="http://www.investopedia.com/terms/s/spotprice.asp">spot price</a>;
+it does not support <a href="http://www.investopedia.com/university/beginners-guide-to-trading-futures/">futures</a> or 
+<a href="http://www.investopedia.com/university/margin/">margin</a> trading... yet.</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p><strong>Warning:</strong> Trading Bitcoin carries significant financial risk; you could lose money. This software is provided 'as is'and released under the <a href="http://opensource.org/licenses/MIT">MIT license</a>.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/gazbert/bxbot">Bxbot</a> is maintained by <a href="https://github.com/gazbert">gazbert</a>.</span>
