--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">BX-bot</h1>
-      <h2 class="project-tagline">BX-bot (Bex) is a simple Java automated trading bot for trading Bitcoin on cryptocurrency exchanges</h2>
+      <h2 class="project-tagline">BX-bot (Bex) is a simple Bitcoin trading bot written in Java</h2>
       <a href="https://github.com/gazbert/bxbot" class="btn">View on GitHub</a>
       <a href="https://github.com/gazbert/bxbot/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/gazbert/bxbot/tarball/master" class="btn">Download .tar.gz</a>
@@ -22,7 +22,7 @@
       <h2>
 <a id="what-is-bx-bot" class="anchor" href="#what-is-bx-bot" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is BX-bot?</h2>
 
-<p>BX-bot (<em>Bex</em>) is a simple Java automated trading bot for trading <a href="https://bitcoin.org">Bitcoin</a> on cryptocurrency <a href="https://bitcoinwisdom.com/">exchanges</a>.</p>
+<p>BX-bot (<em>Bex</em>) is a simple Java trading bot for trading <a href="https://bitcoin.org">Bitcoin</a> on cryptocurrency <a href="https://bitcoinwisdom.com/">exchanges</a>.</p>
 
 <p>The project contains the basic infrastructure to trade on a <a href="http://coinmarketcap.com/">cryptocurrency</a> exchange...
 except for the trading strategies - you'll need to write those yourself. A simple example <a href="http://www.investopedia.com/articles/trading/02/081902.asp">scalping strategy</a> is included to get you started with the Trading API - take a look <a href="http://www.investopedia.com/articles/active-trading/101014/basics-algorithmic-trading-concepts-and-examples.asp">here</a> for more ideas.</p>
