Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">BX-bot</h1>
-      <h2 class="project-tagline">BX-bot (Bex) is a simple Bitcoin trading bot written in Java</h2>
+      <h2 class="project-tagline">BX-bot is a simple Bitcoin trading bot written in Java</h2>
       <a href="https://github.com/gazbert/bxbot" class="btn">View on GitHub</a>
       <a href="https://github.com/gazbert/bxbot/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/gazbert/bxbot/tarball/master" class="btn">Download .tar.gz</a>
