Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ except for the trading strategies - you'll need to write those yourself. A simpl
 <p>The Trading API provides support for <a href="http://www.investopedia.com/terms/l/limitorder.asp">limit orders</a>
 traded at the <a href="http://www.investopedia.com/terms/s/spotprice.asp">spot price</a>;
 it does not support <a href="http://www.investopedia.com/university/beginners-guide-to-trading-futures/">futures</a> or 
-<a href="http://www.investopedia.com/university/margin/">margin</a> trading... yet.</p>
+<a href="http://www.investopedia.com/university/margin/">margin</a> trading.</p>
 
 <p><strong>Warning:</strong> Trading Bitcoin carries significant financial risk; you could lose money. This software is provided 'as is'and released under the <a href="http://opensource.org/licenses/MIT">MIT license</a>.</p>
 
